# splat

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  splat.toml
.github/workflows/: ci.yml  release.yml
example/: splat.toml
example/theme/static/css/: custom.css  default-skin.css
example/theme/templates/: index.html
source/street photography/: index.md
source/technology/: index.md
src/: config.rs  main.rs  metadata.rs  process.rs
static/css/: app.css
street photography/: index.html
technology/: index.html
theme/: input.css
theme/templates/: index.html
