[package]
name = "splat"
version = "0.1.0"
authors = ["Matthias Vogelgesang"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0"
pulldown-cmark = "0"
rayon = "1"
regex = "1"
serde = "1"
serde_derive = "1"
tera = "1"
toml = "0"

[dev-dependencies]
tempfile = "3"
