[package]
name = "splat"
version = "1.0.0"
authors = ["Matthias Vogelgesang"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0"
pulldown-cmark = "0"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
tera = "1"
toml = "0"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
